--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
   }
 
   .content-text-front{
+    padding: 20px;
     height: 10em;
+    background-color: aquamarine;
   }
   .content-text-first{
     font-size: 50px;
@@ -143,7 +145,7 @@
             <!-- Cards -->
             <div class="card">
               <div class="image-wrapper">
-                <img src="Image/colorful-vintage-collage-design 1 (2).png" alt="...">
+                <img src="colorful-vintage-collage-design 1 (2).png" alt="...">
               </div>
               <div class="card-body">
                 <div class="card-title">
@@ -159,7 +161,7 @@
             <!-- Cards -->
             <div class="card">
               <div class="image-wrapper">
-                <img src="Image/colorful-vintage-collage-design 1.png" alt="...">
+                <img src="colorful-vintage-collage-design 1.png" alt="...">
               </div>
               <div class="card-body">
                 <div class="card-title">
@@ -175,7 +177,7 @@
             <!-- Cards -->
             <div class="card">
               <div class="image-wrapper">
-                <img src="Image/colorful-vintage-collage-design 1 (1).png" alt="...">
+                <img src="colorful-vintage-collage-design 1 (1).png" alt="...">
               </div>
               <div class="card-body">
                 <div class="card-title">
@@ -198,7 +200,7 @@
           <div class="cards-wrapper">
             <div class="card">
               <div class="image-wrapper">
-                <img src="Image/colorful-vintage-collage-design 1 (2).png" alt="...">
+                <img src="colorful-vintage-collage-design 1 (2).png" alt="...">
               </div>
               <div class="card-body">
                 <div class="card-title">
@@ -214,7 +216,7 @@
             <!-- Cards -->
             <div class="card">
               <div class="image-wrapper">
-                <img src="Image/colorful-vintage-collage-design 1.png" alt="...">
+                <img src="colorful-vintage-collage-design 1.png" alt="...">
               </div>
               <div class="card-body">
                 <div class="card-title">
@@ -230,7 +232,7 @@
             <!-- Cards -->
             <div class="card">
               <div class="image-wrapper">
-                <img src="Image/colorful-vintage-collage-design 1 (2).png" alt="...">
+                <img src="colorful-vintage-collage-design 1 (2).png" alt="...">
               </div>
               <div class="card-body">
                 <div class="card-title">
@@ -246,7 +248,7 @@
             <!-- Cards -->
             <div class="card">
               <div class="image-wrapper">
-                <img src="Image/colorful-vintage-collage-design 1.png" alt="...">
+                <img src="colorful-vintage-collage-design 1.png" alt="...">
               </div>
               <div class="card-body">
                 <div class="card-title">
