--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   }
 
   .content-text-front{
-    padding: 20px;
+    padding: 10px;
     height: 10em;
     background-color: aquamarine;
   }
@@ -107,12 +107,12 @@
       margin-left: 20px;
     }
     .content-text-front{
-      height: 5em;
+      height: 6em;
     }
     .card{
-      margin: 1em;
-      height: 300px;
-      width: 250px;
+      margin: .5em;
+      height: 400px;
+      width: 300px;
     }
   }
 </style>
