--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     display: flex;
   }
   .card{
+    margin-top: 1.5em;
     margin: 1em;
     height: 400px;
     width: 300px;
@@ -112,6 +113,25 @@
     .card{
       margin: .5em;
       height: 400px;
+      width: 300px;
+    }
+  }
+
+  @media screen and (max-width: 380px){
+    .content-text-first{
+      font-size: 20px;
+      margin-left: 20px;
+    }
+    .content-text-second{
+      font-size: 10px;
+      margin-left: 20px;
+    }
+    .content-text-front{
+      height: 4em;
+    }
+    .card{
+      margin: .2em;
+      height: 350px;
       width: 300px;
     }
   }
