--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   .cards-wrapper{
     display: flex;
   }
+  .slide{
+    margin-top: 25px;
+  }
   .card{
     margin-top: 1.5em;
     margin: 1em;
